# billing_system_kanastra

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/entrypoints/: invoice.py
app/adapters/repositories/: .invoice.py.swp  email.py  invoice.py
app/configs/: dependency_injection.py  settings.py
app/domain/models/: email.py  invoice.py
app/domain/ports/: email.py  invoice.py
tests/integrated/adapters/api/: test_invoice.py
tests/integrated/repositories/: conftest.py  test_invoices_repository.py
